# cheesetastic

./: README.md  app.py  pyproject.toml  quotes.json
static/: styles.css
