[tool.poetry]
name = "cheesy-api"
version = "0.1.0"
description = ""
authors = ["Tomas Gilys <tomas.gilys@pm.me>"]
readme = "README.md"
packages = [{include = "cheesy_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
